Fix of badly structured listing response
